// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HoverContainer /> has \`style.bottom\` defined when \`prop.position\` is \`bottom\` 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH qqkjm"
  data-testid="HoverContainer"
  style="bottom: -12px; left: -100px; opacity: 1;"
>
  <div
    class="sc-htpNat jLMZYD"
    color="#7D95B6"
  >
    test-label
  </div>
</div>
`;

exports[`<HoverContainer /> has \`style.top\` defined when \`prop.position\` is \`top\` 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH qqkjm"
  data-testid="HoverContainer"
  style="top: -12px; left: -100px; opacity: 1;"
>
  <div
    class="sc-htpNat eMVyCK"
    color="#FFFFFF"
  >
    test-label
  </div>
</div>
`;

exports[`<HoverContainer /> hides component when \`props.visible\` is false 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH qqkjm"
  data-testid="HoverContainer"
  style="top: -12px; left: -100px; opacity: 0;"
>
  <div
    class="sc-htpNat eMVyCK"
    color="#FFFFFF"
  >
    test-label
  </div>
</div>
`;

exports[`<HoverContainer /> renders without crashing 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH qqkjm"
  data-testid="HoverContainer"
  style="top: -12px; left: -100px; opacity: 1;"
>
  <div
    class="sc-htpNat eMVyCK"
    color="#FFFFFF"
  >
    test-label
  </div>
</div>
`;

exports[`<HoverContainer /> shows component when \`props.visible\` is true 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH qqkjm"
  data-testid="HoverContainer"
  style="top: -12px; left: -100px; opacity: 1;"
>
  <div
    class="sc-htpNat eMVyCK"
    color="#FFFFFF"
  >
    test-label
  </div>
</div>
`;
